syntax = "proto3";
package cache;

option go_package = "internal/transport/proto";

service RandomService {
    rpc GetRandomDataStream(GetRandomDataStreamRequest) returns (stream GetRandomDataStreamResponse);
}

message GetRandomDataStreamRequest {}

message GetRandomDataStreamResponse {
    string result = 1;
}
